@@ -3,6 +3,12 @@
 ## Enhancements
 
  * Added `DelayedAutoStart` boolean property to objects returned by `Get-ServiceConfiguration`. This flag is `true` when a service is set to start automatically, delayed. `False` otherwise. Added extended 
+ * `Install-Service` can now set a service's startup type to `Automatic (Delayed)`. Pass `Automatic` to the `StartupType` and use the new `Delayed` switch. The `Delayed` switch is ignored unless `StartupType` is `Automatic`.
+ 
+## Bug Fixes
+
+ * `Install-Service` writes an error when a service is running and its startup type is changed to `Disabled`.
+ 
 
 # 2.4.1 (21 February 2017)
 
